# SpringAI

./: CMakeLists.txt  CMakePresets.json  README.md  Spring.sh  build.sh  mailmap.txt
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
Include/: ChatStatus.hpp  Chunk.hpp  Configs.hpp  funcs.hpp
Include_tmp/: FileInfo.hpp  funcs.hpp
include/: ChatStatus.hpp  Chunk.hpp
src/: Chat.cpp  Chunking.cpp  Configs.hpp  ContextRetrieval.cpp  Elimination.cpp  Embeddings.cpp  Readfiles.cpp  Response_Body_Template.txt  Similarity.cpp  exec.cpp  funcs.hpp  main.cpp  readFile.cpp  writeFile.cpp
src/Tools/: exec.cpp  readFile.cpp  writeFile.cpp
